[gd_scene load_steps=22 format=2]

[ext_resource path="res://characters/enemies/ChasingEnemyTest/sprites/idle.png" type="Texture" id=1]
[ext_resource path="res://characters/enemies/ChasingEnemyTest/ChasingEnemy.gd" type="Script" id=2]
[ext_resource path="res://characters/enemies/ChasingEnemyTest/sprites/chasing.png" type="Texture" id=3]
[ext_resource path="res://characters/enemies/ChasingEnemyTest/sprites/attack.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.5, 41.5 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 30, 38.5 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 27.5, 42 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -17, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "running"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -9, -5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "running"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachine" id=14]
states/attack/node = SubResource( 6 )
states/attack/position = Vector2( 68, 126 )
states/idle/node = SubResource( 7 )
states/idle/position = Vector2( 159, 36 )
states/running/node = SubResource( 8 )
states/running/position = Vector2( 275, 126 )
transitions = [ "idle", "running", SubResource( 9 ), "running", "attack", SubResource( 10 ), "idle", "attack", SubResource( 11 ), "attack", "idle", SubResource( 12 ), "running", "idle", SubResource( 13 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=15]

[node name="Chaser" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="CollisonBox" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 3.5 )
shape = SubResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Hitbox" type="Area2D" parent="Node2D"]
monitoring = false

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Node2D/Hitbox"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -37, 6.5 )
shape = SubResource( 16 )

[node name="DetectionArea" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/DetectionArea"]
modulate = Color( 0, 0.133333, 1, 1 )
position = Vector2( -30.5, 3 )
shape = SubResource( 17 )

[node name="Sprite" type="Sprite" parent="Node2D"]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D"]
root_node = NodePath("../..")
reset_on_save = false
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 5 )
anims/idle = SubResource( 3 )
anims/running = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="Node2D"]
tree_root = SubResource( 14 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 15 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="Node2D/Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Node2D/DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
